tests/ui/no_required_attribute.stderr
error: proc-macro derive panicked
 --> tests/ui/no_required_attribute.rs:3:10
  |
3 | #[derive(QueryParams)]
  |          ^^^^^^^^^^^
  |
  = help: message: Non-optional types must be marked with #[query(required)] attribute
