tests/ui/no_required_attribute.rs
use to_query_params::QueryParams;

#[derive(QueryParams)]
struct Data {
    number: f64,
}

fn main() {}
